--- a/kaitai_struct_runtime_csharp.nuspec
+++ b/kaitai_struct_runtime_csharp.nuspec
@@ -12,7 +12,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>
-      Changed default namespace to Katai.
+      Changed default namespace to Kaitai.
       Changed assembly name to Kaitai.Struct.Runtime.
     </releaseNotes>
     <copyright>$copyright$</copyright>
