Add source and EOL in .editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,6 @@
-﻿###############################
+﻿# Source: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference?view=vs-2019
+
+###############################
 # Core EditorConfig Options   #
 ###############################
 
