--- a/kaitai_struct_runtime_csharp.csproj
+++ b/kaitai_struct_runtime_csharp.csproj
@@ -12,7 +12,7 @@
     <Company>Kaitai Project</Company>
     <Description>This library implements Kaitai Struct API for C#.</Description>
     <Product>Kaitai Struct Runtime</Product>
-    <Copyright>Copyright © Kaitai Project 2016-2019</Copyright>
+    <Copyright>Copyright © Kaitai Project 2016-2020</Copyright>
     <AssemblyName>Kaitai.Struct.Runtime</AssemblyName>
     <RootNamespace>Kaitai</RootNamespace>
     <PackageProjectUrl>http://kaitai.io/</PackageProjectUrl>
@@ -25,7 +25,7 @@
     <FileVersion>0.8.0.0</FileVersion>
     <Version>0.8.0.0</Version>
 
-    <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageReleaseNotes>Update to version 0.8</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
