NuGet: enable .NET Source Link
See
- https://github.com/dotnet/sourcelink/tree/1.1.1#using-source-link-in-net-projects
- https://github.com/dotnet/sourcelink/tree/1.1.1#githubcom-and-github-enterprise

--- a/kaitai_struct_runtime_csharp.csproj
+++ b/kaitai_struct_runtime_csharp.csproj
@@ -4,6 +4,16 @@
     <TargetFrameworks>netstandard1.3;net4.5</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1701;1702;CS1591</NoWarn>
+
+    <!-- Optional: Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+
+    <!-- Optional: Embed source files that are not tracked by the source control manager in the PDB -->
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+
+    <!-- Optional: Build symbol package (.snupkg) to distribute the PDB containing Source Link -->
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -27,6 +37,10 @@
 
     <PackageReleaseNotes>Update to version 0.10</PackageReleaseNotes>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="LICENSE.txt" Pack="true" PackagePath="" />
