NuGet: use SPDX license expr instead of (deprecated) license file
See https://docs.microsoft.com/en-us/nuget/reference/msbuild-targets#packing-a-license-expression-or-a-license-file

--- a/kaitai_struct_runtime_csharp.csproj
+++ b/kaitai_struct_runtime_csharp.csproj
@@ -28,7 +28,7 @@
     <PackageProjectUrl>http://kaitai.io/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/kaitai-io/kaitai_struct_csharp_runtime</RepositoryUrl>
     <PackageTags>Kaitai Struct File-Format Binary Protocols</PackageTags>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
 
     <AssemblyVersion>0.10.0.0</AssemblyVersion>
